[package]
name = "esp32-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.11.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-hal = { version = "0.17.0", features = [
    "esp32",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy-executor-interrupt",
    "embassy-integrated-timers"
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }

embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = "0.3.0"
embassy-sync = "0.5.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
portable-atomic = "1.6.0"

# embassy-executor   = { version = "0.3.0", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
# embassy-time   = { version = "0.1.5", features = ["nightly"] }
# embassy-sync = "0.5.0"
# embedded-hal-async = "1.0.0-rc.1"
# embedded-io-async = "0.6.1"
# portable-atomic = "1.5.1"


[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
