[package]
name = "esp32-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.11.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-hal = { version = "0.17.0", features = [
    "esp32",
    "async",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy-executor-interrupt",
    "embassy-integrated-timers",
    "embedded-hal-02",
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }

embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = "0.3.0"
embassy-sync = { version = "0.5.0" }
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
portable-atomic = "1.6.0"
static_cell = "2.1.0"
embassy-futures = "0.1.1"

liquidcrystal_i2c-rs = "0.1.0"

# liquidcrystal_i2c-rs = { git = "https://github.com/guanicoe/LiquidCrystal_I2C-rs", rev = "a1aa87b55ba660e206da07dec0dfb418a9a702d4" }

# embassy-executor   = { version = "0.3.0", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
# embassy-time   = { version = "0.1.5", features = ["nightly"] }
# embassy-sync = "0.5.0"
# embedded-hal-async = "1.0.0-rc.1"
# embedded-io-async = "0.6.1"
# portable-atomic = "1.5.1"


[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
